# langchain-learn

./: .env  .gitignore  README.md  pyproject.toml
docs/: 傻妞的使用说明书.md
examples/: helloworld.ipynb
src/longchain_learn/chapter01-summary/: helloworld.ipynb
src/longchain_learn/chapter02-model IO/: 01-模型的调用.ipynb  02-再谈模型的调用.ipynb  03-提示词模板之Prompt Template.ipynb  04-提示词模板之ChatPromptTemplate.ipynb  05-提示词模板之少量示例的提示词模板.ipynb  06-从文档中加载Prompt.ipynb  07-输出解析器的使用.ipynb  08-LangChain调用本地模型.ipynb
src/longchain_learn/chapter02-model IO/.ipynb_checkpoints/: 01-模型的调用-checkpoint.ipynb
src/longchain_learn/chapter02-model IO/prompt/: prompt.json
src/longchain_learn/chapter03-Chains/: 01-LCEL语法的理解.ipynb  02-传统的chain的使用.ipynb  03-基于LCEL构建的Chains的类型.ipynb
src/longchain_learn/chapter04-Memory/: 01-使用Memoery模块之前.ipynb  02-基础Memory模块的使用.ipynb  03-其他Memory模块的使用.ipynb
src/longchain_learn/chapter05-Tools/: 01-自定义工具.ipynb  02-大模型分析工具的调用.ipynb  a.txt
src/longchain_learn/chapter06-Agents/: 01-调用工具之传统方式的使用.ipynb  02-调用工具之通用方式的使用.ipynb  03-Agent嵌入记忆之传统方式的使用.ipynb  04-Agent嵌入记忆之通用方式的使用.ipynb
src/longchain_learn/chapter07-Retrieval/: 01-文档加载器 Document Loaders的使用.ipynb  02-文档拆分器 Text Splitters的使用.ipynb
tests/: 01-大模型的异步调用.py  Tests01.py  tests02.py  tests03.py  项目的目录结构读取.py
