[project]
name = "langchain-learn"
version = "0.1.0"
description = "langchain-learn 项目学习"
authors = [
    { name = "chenxirui", email = "samrtloe@foxmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.1.0",
    "dashscope>=1.24.6",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "httpx-sse>=0.4.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchainhub>=0.1.21",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

# pyproject.toml (Black配置)
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    # 排除目录
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
