[project]
name = "langchain-learn"
version = "0.1.0"
description = "langchain-learn 项目学习"
authors = [
    { name = "chenxirui", email = "samrtloe@foxmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "bs4>=0.0.2",
    "chromadb>=1.1.0",
    "dashscope>=1.24.6",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "httpx-sse>=0.4.1",
    "jq>=1.10.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyterlab>=4.4.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchainhub>=0.1.21",
    "markdown>=3.9",
    "networkx>=3.4.2",
    "numexpr>=2.13.1",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pymysql>=1.1.2",
    "pypdf>=6.1.1",
    "requests>=2.32.5",
    "unstructured>=0.18.15",
]

# pyproject.toml (Black配置)
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    # 排除目录
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


#换源
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
